--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@ body {
   border-right: 1px solid lightgray;
   padding: 20px;
   height: calc(100% - 40px);
+  position: fixed;
+  z-index: 999;
 }
 
 .config-panel-section-title {
@@ -98,8 +100,4 @@ body {
   right: 20px;
   font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   opacity: 30%;
-}
-
-.gosling-component > div > div {
-  /* background-color: #FAFAFA; */
 }
