--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,39 @@ body {
   font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   opacity: 30%;
 }
+
+.vis-panel-overlay {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100%;
+  /* box-shadow: inset 0px 0px 0px 2px gray; */
+  /* background-color: #7AADED00; */
+  cursor: grab;
+}
+
+.vis-panel-overlay:hover {
+  box-shadow: inset 0px 0px 0px 2px #7AADED;
+  background-color: #7AADED22;
+}
+
+.vis-panel-overlay-active {
+  box-shadow: inset 0px 0px 0px 2px #7AADED;
+  pointer-events: none;  
+}
+
+.vis-panel-overlay > span {
+  opacity: 0;
+  background-color: gray;
+  font-weight: bold;
+  color: white;
+  line-height: 10px;
+  position: fixed;
+  top: 0;
+  padding: 10px;
+}
+
+.vis-panel-overlay:hover > span  {
+  opacity: 1;
+  background-color: #7AADED;
+}
