--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,98 @@
 html,
 body,
 #root {
-  font-family: Helvetica, Arial, sans-serif, "Lato", "Inter", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  height: 100%;
+    font-family: Helvetica, Arial, sans-serif, 'Lato', 'Inter', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    height: 100%;
 }
 
 body {
-  background-color: white;
+    background-color: white;
 }
 
 .panel-title {
-  font-size: 14px;
-  font-weight: bold;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .panel-title > small {
-  font-size: 12px;
-  margin-left: 6px;
+    font-size: 12px;
+    margin-left: 6px;
 }
 
 .config-panel {
     visibility: hidden;
     background-color: #f6f6f6;
-  border-right: 1px solid lightgray;
-  padding: 20px;
-  height: calc(100% - 40px);
-  position: fixed;
-  z-index: 999;
+    border-right: 1px solid lightgray;
+    padding: 20px;
+    height: calc(100% - 40px);
+    position: fixed;
+    z-index: 999;
 }
 
 .config-panel-section-title {
-  font-size: 14px;
-  margin-top: 20px;
-  font-weight: bold;
+    font-size: 14px;
+    margin-top: 20px;
+    font-weight: bold;
 }
 
 .config-panel-input-container {
-  margin-top: 18px;
-  width: 100%;
+    margin-top: 18px;
+    width: 100%;
 }
 
 .config-panel-label {
-  /* label on the left of HTML elements */
-  font-size: 14px;
-  height: 30px;
-  line-height: 30px;
-  width: 40%;
-  display: inline-block;
+    /* label on the left of HTML elements */
+    font-size: 14px;
+    height: 30px;
+    line-height: 30px;
+    width: 40%;
+    display: inline-block;
 }
 
 .config-panel-label > small {
-  margin-left: 4px;
-  font-size: 10px;
-  font-weight: bold;
+    margin-left: 4px;
+    font-size: 10px;
+    font-weight: bold;
 }
 
 .config-panel-input {
-  width: 60%;
-  display: inline-block;
+    width: 60%;
+    display: inline-block;
 }
 
 .config-panel-dropdown {
-  font-size: 14px;
-  height: 30px;
-  width: 100%;
+    font-size: 14px;
+    height: 30px;
+    width: 100%;
 }
 
 .config-panel-search-box {
-  font-size: 14px;
-  height: calc(30px - 6px);
-  width: calc(100% - 24px);
-  padding: 3px 12px;
+    font-size: 14px;
+    height: calc(30px - 6px);
+    width: calc(100% - 24px);
+    padding: 3px 12px;
 }
 
 .config-panel-button {
-  font-size: 14px;
-  margin-top: 20px;
-  height: 30px;
-  width: 100%;
-  text-align: center;
-  line-height: 30px;
-  border: 1px solid black;
-  border-radius: 3px;
-  background: white;
-  cursor: pointer;
+    font-size: 14px;
+    margin-top: 20px;
+    height: 30px;
+    width: 100%;
+    text-align: center;
+    line-height: 30px;
+    border: 1px solid black;
+    border-radius: 3px;
+    background: white;
+    cursor: pointer;
 }
 
 .config-panel-button:hover {
-  box-shadow: 0px 0px 4px #00000066;
+    box-shadow: 0px 0px 4px #00000066;
 }
 
 .vis-panel {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .config-button {
@@ -153,23 +153,23 @@ body {
 
 .vis-overview-panel .config {
     min-height: 100px;
-    background: #F6F6F6;
+    background: #f6f6f6;
     border-top: 1px solid lightgray;
     position: relative;
     padding: 30px;
 }
 
 .vis-overview-panel .config .button {
-  font-size: 14px;
-  height: 30px;
-  width: calc(100% - 20px);
-  text-align: center;
-  line-height: 30px;
-  border: 1px solid black;
-  border-radius: 3px;
-  background: white;
-  cursor: pointer;
-  left: 10px;
+    font-size: 14px;
+    height: 30px;
+    width: calc(100% - 20px);
+    text-align: center;
+    line-height: 30px;
+    border: 1px solid black;
+    border-radius: 3px;
+    background: white;
+    cursor: pointer;
+    left: 10px;
 }
 
 .vis-overview-panel table {
@@ -188,74 +188,74 @@ body {
 }
 
 vis-overview-panel .overview-title {
-  position: absolute;
-  left: -10px;
-  top: 120px;
-  transform: rotate(-90deg);
-  font-weight: bold;
-  font-size: 18px;
-  text-shadow: 0px 0px 12px #f6f6f6
-  }
+    position: absolute;
+    left: -10px;
+    top: 120px;
+    transform: rotate(-90deg);
+    font-weight: bold;
+    font-size: 18px;
+    text-shadow: 0px 0px 12px #f6f6f6;
+}
 
 .vis-overview-panel .selected-overview {
-    box-shadow:inset 0px 0px 0px 2px #2e94ff; 
+    box-shadow: inset 0px 0px 0px 2px #2e94ff;
 }
 
 .vis-overview-panel .unselected-overview {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .vis-overview-panel .unselected-overview:hover {
-    box-shadow:inset 0px 0px 0px 2px #2e94ff; 
+    box-shadow: inset 0px 0px 0px 2px #2e94ff;
 }
 
 .vis-overview-panel td {
-  padding: 20px;
+    padding: 20px;
 }
 
 .gosling-panel {
-  overflow-y: auto;
+    overflow-y: auto;
 }
 
 .vis-panel-title {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  opacity: 30%;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    opacity: 30%;
 }
 
 .vis-panel-overlay {
-  position: fixed;
-  right: 0;
-  top: 0;
-  height: 100%;
-  /* box-shadow: inset 0px 0px 0px 2px gray; */
-  /* background-color: #7AADED00; */
-  cursor: grab;
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100%;
+    /* box-shadow: inset 0px 0px 0px 2px gray; */
+    /* background-color: #7AADED00; */
+    cursor: grab;
 }
 
 .vis-panel-overlay:hover {
-  box-shadow: inset 0px 0px 0px 2px #7aaded;
-  background-color: #7aaded22;
+    box-shadow: inset 0px 0px 0px 2px #7aaded;
+    background-color: #7aaded22;
 }
 
 .vis-panel-overlay-active {
-  box-shadow: inset 0px 0px 0px 2px #7aaded;
-  pointer-events: none;
+    box-shadow: inset 0px 0px 0px 2px #7aaded;
+    pointer-events: none;
 }
 
 .vis-panel-overlay > span {
-  opacity: 0;
-  background-color: gray;
-  font-weight: bold;
-  color: white;
-  line-height: 10px;
-  position: fixed;
-  top: 0;
-  padding: 10px;
+    opacity: 0;
+    background-color: gray;
+    font-weight: bold;
+    color: white;
+    line-height: 10px;
+    position: fixed;
+    top: 0;
+    padding: 10px;
 }
 
 .vis-panel-overlay:hover > span {
-  opacity: 1;
-  background-color: #7aaded;
+    opacity: 1;
+    background-color: #7aaded;
 }
