feat: add background pattern to scrollable area

--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,8 @@ body {
 }
 
 .gosling-panel {
+    background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgo8cmVjdCB3aWR0aD0nNScgaGVpZ2h0PSc1JyBmaWxsPScjZmZmJy8+CjxyZWN0IHdpZHRoPScxJyBoZWlnaHQ9JzEnIGZpbGw9JyNjY2MnLz4KPC9zdmc+');
+    background-repeat: repeat;
     overflow-y: auto;
     display: grid;
 }
