--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,16 @@ body {
     z-index: 999;
 }
 
+.help-label {
+    position: absolute;
+    top: 12px;
+    right: 20px;
+    font-weight: bold;
+    color: gray;
+    text-shadow: 0px 0px 6px white;
+    z-index: 999;
+}
+
 .vis-overview-panel {
     position: absolute;
     width: 800px;
