--- a/src/App.css
+++ b/src/App.css
@@ -180,11 +180,11 @@ body {
 
 .vis-overview-panel {
     position: absolute;
-    width: 800px;
+    width: 100%;
     height: 100%;
     border-right: 1px solid lightgray;
     background-color: white;
-    box-shadow: 0px 0px 12px #00000032;
+    /* box-shadow: 0px 0px 12px #00000032; */
     overflow-y: auto;
     z-index: 999;
     left: 0px;
@@ -192,7 +192,7 @@ body {
 }
 
 .hide {
-    left: -800px;
+    left: -100%;
 }
 
 .vis-overview-panel .gosling-component {
