--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
+body {
+    margin: 0;
+    font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
 html,
 body,
 #root {
-    font-family: Helvetica, Arial, sans-serif, 'Lato', 'Inter', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif, 'Lato', 'Inter', 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Segoe UI Symbol';
     height: 100%;
 }
 
@@ -199,7 +212,9 @@ body {
     top: 12px;
     left: 50px;
     text-shadow: 0px 0px 6px white;
+    font-size: 18px;
     z-index: 999;
+    background: #ffffff99;
 }
 
 .help-label {
@@ -209,6 +224,7 @@ body {
     text-shadow: 0px 0px 6px white;
     z-index: 999;
     color: gray;
+    background: #ffffff99;
 }
 
 .vis-overview-panel {
