--- a/src/App.css
+++ b/src/App.css
@@ -93,26 +93,6 @@ body {
     border-radius: 0px;
 }
 
-.zoom-in-button {
-    left: 380px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-.zoom-out-button {
-    left: 410px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-.zoom-left-button {
-    left: 455px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-.zoom-right-button {
-    left: 485px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
 .zoom-in-button,
 .zoom-out-button,
 .zoom-left-button,
@@ -129,7 +109,29 @@ body {
     line-height: 30px;
     border: 1px solid lightgrey;
 }
-
+.zoom-in-button {
+    left: 380px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.zoom-out-button {
+    left: 410px;
+    line-height: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.zoom-left-button {
+    left: 455px;
+    line-height: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.zoom-right-button {
+    left: 485px;
+    line-height: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
 .zoom-in-button:hover,
 .zoom-out-button:hover,
 .zoom-left-button:hover,
