--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
-    font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -13,8 +13,8 @@ code {
 html,
 body,
 #root {
-    font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif, 'Lato', 'Inter', 'Apple Color Emoji',
-        'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: 'Inter', 'Roboto', Helvetica, Arial, sans-serif, 'Lato', 'Inter', 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol';
     height: 100%;
 }
 
@@ -286,11 +286,11 @@ body {
 }
 
 .config-button {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 10px;
+    left: 10px;
     cursor: pointer;
     z-index: 999;
 }
@@ -372,7 +372,7 @@ body {
     border-right: 1px solid lightgray;
     background-color: white;
     /* box-shadow: 0px 0px 12px #00000032; */
-    overflow-y: auto;
+    overflow-y: none;
     z-index: 999;
     left: 0px;
     transition: left 0.2s ease;
@@ -388,9 +388,9 @@ body {
 }
 
 .vis-overview-panel .title {
+    height: 30px;
     padding: 10px;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 18px;
     border-bottom: 1px solid lightgray;
     background: #f6f6f6;
 }
@@ -405,7 +405,7 @@ body {
     cursor: pointer;
     position: absolute;
     right: 5px;
-    top: 5px;
+    top: 12px;
 }
 
 .vis-overview-panel .config {
@@ -432,8 +432,28 @@ body {
 .vis-overview-panel .overview-container {
     display: flex;
     flex-wrap: wrap;
+    height: calc(100% - 40px);
     padding: 20px;
     gap: 20px;
+    overflow-y: auto;
+}
+
+.overview-root {
+    gap: 0px;
+    height: calc(100% - 50px);
+}
+
+.overview-container {
+    width: calc(100% - 400px - 40px);
+    float: left;
+}
+
+.overview-left {
+    float: left;
+    height: 100%;
+    width: 399px;
+    border-right: 1px solid lightgrey;
+    overflow-y: auto;
 }
 
 .vis-overview-panel table {
@@ -489,6 +509,7 @@ body {
 }
 
 .gosling-panel {
+    /* http://iros.github.io/patternfills/sample_d3.html */
     background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgo8cmVjdCB3aWR0aD0nNScgaGVpZ2h0PSc1JyBmaWxsPScjZmZmJy8+CjxyZWN0IHdpZHRoPScxJyBoZWlnaHQ9JzEnIGZpbGw9JyNjY2MnLz4KPC9zdmc+');
     background-repeat: repeat;
     overflow-y: auto;
