--- a/src/ui/side-menu.css
+++ b/src/ui/side-menu.css
@@ -22,11 +22,17 @@
     height: 1px;
     border-top: 1px solid lightgrey;
 }
+.sample-config-form-hidden,
 .sample-config-form {
     width: calc(100% - 80px);
     border-radius: 10px;
     background-color: rgb(244, 244, 244);
     padding: 20px;
+}
+.sample-config-form-hidden {
+    height: 0px;
+    cursor: pointer;
+    content-visibility: hidden;
 }
 .menu-button,
 .menu-button-disallowed {
