--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -5,7 +5,7 @@
 
 .heroBanner {
     padding: 4rem 0;
-    text-align: center;
+    text-align: left;
     position: relative;
     overflow: hidden;
 }
@@ -18,6 +18,6 @@
 
 .buttons {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
 }
