--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,38 @@ a:hover {
     border-radius: 0px;
 }
 
+.navigation-buttons {
+    position: fixed;
+    z-index: 998;
+    display: flex;
+    margin-top: 20px;
+    margin-left: 25px;
+}
+
+.navigation-button {
+    cursor: pointer;
+    font-size: 16px;
+    height: 38px;
+    width: 140px;
+    padding: 2px 10px;
+    border: 1px solid lightgrey;
+    box-shadow: #0000001a 5px 5px 10px;
+}
+
+.navigation-button:hover {
+    background: lightgrey;
+}
+.navigation-button:active {
+    background: rgb(197, 197, 197);
+}
+
+.navigation-button-circular {
+    border-radius: 8px 0px 0px 8px;
+}
+.navigation-button-linear {
+    border-radius: 0px 8px 8px 0px;
+}
+
 .zoom-in-button,
 .zoom-out-button,
 .zoom-left-button,
