--- a/src/App.css
+++ b/src/App.css
@@ -749,15 +749,15 @@ a:hover {
     background-color: #7aaded;
 }
 
-/* Styles for the linear view controls */
-.linear-view-controls {
+/* Styles for the variant view controls */
+.variant-view-controls {
     position: absolute;
     display: flex;
     flex-direction: row;
     height: 30px;
     justify-content: center;
     left: 3px;
-    
+
     .chromosome-select {
         position: relative;
         height: auto;
@@ -806,7 +806,6 @@ a:hover {
 
 /* Minimal Mode styles */
 .minimal_mode {
-
     .gosling-panel {
         overflow-y: scroll;
         overflow-x: hidden;
@@ -827,18 +826,18 @@ a:hover {
     }
 
     .navigation-button {
-        background-color: #F6F6F6;
+        background-color: #f6f6f6;
         cursor: pointer;
         font-size: 1rem;
         font-family: Inter;
         height: 40px;
         width: 210px;
         padding: 2px 10px;
-        border: 1px solid #D3D3D3;
+        border: 1px solid #d3d3d3;
     }
 
     .navigation-button:hover:not(:disabled) {
-        background-color: #EBEBEB;
+        background-color: #ebebeb;
     }
     .navigation-button:active:not(:disabled) {
         background-color: #e6e4e4;
@@ -859,8 +858,8 @@ a:hover {
     ::-webkit-scrollbar-thumb {
         width: 10px;
         border-radius: 4px;
-        background-color: rgba(0, 0, 0, .5);
-        box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+        background-color: rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
     }
     ::-webkit-scrollbar:hover {
         cursor: pointer;
@@ -879,17 +878,16 @@ a:hover {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            
 
             .open-in-chromoscope-link {
-                background-color: #F6F6F6;
+                background-color: #f6f6f6;
                 font-size: 0.9rem;
                 font-family: Inter;
                 font-weight: 400;
                 display: flex;
                 height: 35px;
                 justify-content: center;
-                border: 1px solid #D3D3D3;
+                border: 1px solid #d3d3d3;
                 border-radius: 8px;
 
                 .link-group {
@@ -902,32 +900,31 @@ a:hover {
                         stroke: black;
                     }
                 }
-
             }
 
             .open-in-chromoscope-link:hover {
                 text-decoration: none;
                 cursor: pointer;
-                background-color: #EBEBEB;
+                background-color: #ebebeb;
             }
-            
+
             .open-in-chromoscope-link:active {
                 background-color: #e6e4e4;
             }
-            
+
             .export-links {
                 border-radius: 4px;
                 margin-top: 4px;
 
                 .export-dropdown {
                     height: auto;
-                    background-color: #F6F6F6;
+                    background-color: #f6f6f6;
                     right: 0px;
                     border-radius: 8px;
-                    border: 1px solid #D3D3D3;
+                    border: 1px solid #d3d3d3;
                     transition: all 100ms;
                     overflow: hidden;
-        
+
                     .export-button {
                         width: 210px;
                         height: 35px;
@@ -935,22 +932,22 @@ a:hover {
                         border: 0px solid;
                         font-weight: 400;
                         background-color: transparent;
-        
+
                         .export-title {
-                            font-size: .9rem;
+                            font-size: 0.9rem;
                             font-family: Inter;
                         }
-        
+
                         .button.triangle-down {
                             width: 11px;
                             height: 7px;
                             margin-left: 8px;
                         }
                     }
-        
+
                     .export-button:hover {
                         cursor: pointer;
-                        background-color: #EBEBEB;
+                        background-color: #ebebeb;
                     }
 
                     .export-button:active {
@@ -966,13 +963,12 @@ a:hover {
                         background-color: white;
                         margin: 0px 8px 8px 8px;
                         border-radius: 3px;
-    
+
                         .nav-list-item {
                             display: flex;
                             margin: auto;
                         }
-    
-    
+
                         .title-btn {
                             display: flex;
                             position: relative;
@@ -980,35 +976,31 @@ a:hover {
                             height: 25px;
                             margin-left: 0px;
                         }
-    
+
                         .title-btn.png {
                             padding: 0px;
                             border: none;
                             background-color: transparent;
                         }
                     }
-        
                 }
-                
+
                 .export-dropdown.open {
-                    background-color: #EBEBEB;
+                    background-color: #ebebeb;
                     border-radius: 8px;
-                    border: 1px solid #C3C3C3;
+                    border: 1px solid #c3c3c3;
                     transition: all 100ms;
-        
+
                     .export-button {
                         border: none;
                     }
                 }
             }
         }
-
     }
 
-    .linear-view-controls {
+    .variant-view-controls {
         left: 50%;
         transform: translate(-50%, 0px);
-        
     }
-    
 }
